--- a/_posts/2021-06-17-前端-学习笔记2.md
+++ b/_posts/2021-06-17-前端-学习笔记2.md
@@ -30,11 +30,11 @@ tags: Web基础
 
 ### HTML、CSS和JS的关系
 
-![image-20210617125207575](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617125207575.png)
+![image-20210617125207575](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617125207575.png)
 
 ### CSS的作用
 
-![image-20210617125245507](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617125245507.png)
+![image-20210617125245507](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617125245507.png)
 
 ## CSS基础
 
@@ -44,7 +44,7 @@ tags: Web基础
 
 CSS规则由两部分构成：选择器、声明
 
-![image-20210617125600584](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617125600584.png)
+![image-20210617125600584](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617125600584.png)
 
 - 注意
 
@@ -52,11 +52,11 @@ CSS规则由两部分构成：选择器、声明
 
 #### CSS引用
 
-![image-20210617125713866](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617125713866.png)
+![image-20210617125713866](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617125713866.png)
 
 #### CSS注释
 
-![image-20210617125931076](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617125931076.png)
+![image-20210617125931076](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617125931076.png)
 
 ### CSS使用方法
 
@@ -64,69 +64,69 @@ CSS规则由两部分构成：选择器、声明
 
 - 行内样式（内联样式）
 
-![image-20210617130250629](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617130250629.png)
+![image-20210617130250629](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617130250629.png)
 
 - 内部样式表（嵌入样式）
 
-![image-20210617130323281](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617130323281.png)
+![image-20210617130323281](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617130323281.png)
 
 - 外部样式表（Link链人）
 
-![image-20210617130611144](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617130611144.png)
+![image-20210617130611144](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617130611144.png)
 
 - 导入式
 
-![image-20210617130718501](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617130718501.png)
+![image-20210617130718501](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617130718501.png)
 
 注意：需要卸载style标签内
 
-![image-20210617130759028](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617130759028.png)
+![image-20210617130759028](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617130759028.png)
 
 **总结**
 
-![image-20210617130844423](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617130844423.png)
+![image-20210617130844423](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617130844423.png)
 
 #### CSS使用方法优先级
 
 ​	对同一个元素，使用多个css的优先级的问题
 
-![image-20210617162848722](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617162848722.png)
+![image-20210617162848722](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617162848722.png)
 
 ### CSS选择器
 
-![image-20210617163140500](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617163140500.png)
+![image-20210617163140500](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617163140500.png)
 
 #### 标签选择器
 
-![image-20210617163254179](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617163254179.png)
+![image-20210617163254179](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617163254179.png)
 
 #### 类选择器
 
-（1）![image-20210617163325038](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617163325038.png)
+（1）![image-20210617163325038](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617163325038.png)
 
-（2）![image-20210617163713144](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617163713144.png)
+（2）![image-20210617163713144](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617163713144.png)
 
 （3）
 
-![image-20210617163846234](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617163846234.png)
+![image-20210617163846234](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617163846234.png)
 
 #### ID选择器
 
-![image-20210617164020028](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617164020028.png)
+![image-20210617164020028](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617164020028.png)
 
 **注意** ：在一个html文件中，id是唯一的。一个id不能在多个标签中，一个标签也不能有多个id
 
 #### 群组选择器
 
-![image-20210617164358525](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617164358525.png)
+![image-20210617164358525](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617164358525.png)
 
 #### 全局选择器
 
-![image-20210617164529771](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617164529771.png)
+![image-20210617164529771](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617164529771.png)
 
 #### 后代选择器
 
-![image-20210617165040912](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617165040912.png)
+![image-20210617165040912](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617165040912.png)
 
 #### 伪类
 
@@ -137,17 +137,17 @@ CSS规则由两部分构成：选择器、声明
 
 ##### 链接伪类
 
-![image-20210617165422981](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617165422981.png)
+![image-20210617165422981](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617165422981.png)
 
-![image-20210617165602550](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617165602550.png)
+![image-20210617165602550](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617165602550.png)
 
 - 伪类:hover和:active
 
-![image-20210617165740653](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617165740653.png)
+![image-20210617165740653](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617165740653.png)
 
 ##### 伪类顺序
 
-![image-20210617165914239](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617165914239.png)
+![image-20210617165914239](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617165914239.png)
 
 ### CSS继承和层叠
 
@@ -157,7 +157,7 @@ CSS规则由两部分构成：选择器、声明
 
 #### 层叠 
 
-![image-20210617170911891](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617170911891.png)
+![image-20210617170911891](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617170911891.png)
 
 - 层叠时的优先级
   1. id选择器 > class选择器 > 标签选择器
@@ -165,45 +165,45 @@ CSS规则由两部分构成：选择器、声明
 
  #### CSS优先级规则
 
-![image-20210617172115654](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617172115654.png)
+![image-20210617172115654](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617172115654.png)
 
 ##### 选择器权值
 
-![image-20210617172157309](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617172157309.png)
+![image-20210617172157309](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617172157309.png)
 
 ##### 权值规则
 
-![image-20210617172243838](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617172243838.png)
+![image-20210617172243838](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617172243838.png)
 
 列如下列计算权值：
 
-![image-20210617172342502](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617172342502.png)
+![image-20210617172342502](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617172342502.png)
 
 ##### !important规则
 
-![image-20210617172826621](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617172826621.png)
+![image-20210617172826621](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617172826621.png)
 
 作用的样式，为最高优先级。
 
 ##### 总结
 
-![image-20210617172937657](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617172937657.png)
+![image-20210617172937657](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617172937657.png)
 
 ### CSS样式命名
 
 #### CSS命名规则
 
-![image-20210617173239592](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617173239592.png)
+![image-20210617173239592](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617173239592.png)
 
 #### 常用CSS命名
 
-![image-20210617173342100](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617173342100.png)
+![image-20210617173342100](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617173342100.png)
 
-![image-20210617173353006](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617173353006.png)
+![image-20210617173353006](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617173353006.png)
 
-![image-20210617173402403](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617173402403.png)
+![image-20210617173402403](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617173402403.png)
 
 #### 注意事项
 
-![image-20210617173444331](/../assets/%25E5%2589%258D%25E7%25AB%25AF-%25E5%25AD%25A6%25E4%25B9%25A0%25E7%25AC%2594%25E8%25AE%25B0.assets/image-20210617173444331.png)
+![image-20210617173444331](/../assets/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%85%A5%E9%97%A8%E4%B9%8BPuppyDogPitures/image-20210617173444331.png)
 
